--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~7.2.0",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "font-awesome": "^4.7.0",
     "jquery": "^1.9.1",
     "popper.js": "^1.15.0",
     "rxjs": "~6.3.3",
